# charm-linux

./: CLAUDE.md  Cargo.toml  README.md
packs/Water/: prefs.ini
packs/WindChimes/: prefs.ini
packs/computerFans/: prefs.ini
packs/default/: prefs.ini
packs/rain/: prefs.ini
packs/scifi1/: prefs.ini
packs/scifi2/: prefs.ini
packs/soccer/: prefs.ini
packs/volcano/: prefs.ini
src/: app.rs  main.rs
src/audio/: engine.rs  mixer.rs  mod.rs  pitch.rs
src/monitor/: cpu.rs  disk.rs  memory.rs  mod.rs
src/pack/: loader.rs  mod.rs
src/ui/: mod.rs  startup_dialog.rs  tray.rs
